fixed button - time spacing issue

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -169,7 +169,7 @@ div {
   color: white;
 }
 
-.time {
+.digits {
   color: #FFF;
   text-align: center;
   font-size: 1.6rem;
@@ -376,9 +376,6 @@ td:last-child {
 
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-button,
-.button {
-  margin-bottom: 1rem; }
 input,
 textarea,
 select,
